small letter wrap fix

--- a/src/components/ProfilePopup/TransferSchedule/TransferSchedule.scss
+++ b/src/components/ProfilePopup/TransferSchedule/TransferSchedule.scss
@@ -33,8 +33,8 @@
     .item-name {
       font-size: 0.8rem;
       text-align: center;
-      margin-left: 0.5rem;
-      padding-right: 0.7rem;
+      margin-left: 0.4rem;
+      padding-right: 0.6rem;
       font-weight: 600;
     }
   }
